--- a/GroupBuy/src/main/webapp/index.html
+++ b/GroupBuy/src/main/webapp/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<script>
-			//window.location.href='./mvc/group_buy/login';
+			window.location.href='./mvc/group_buy/login';
 		</script>
 	</head>
-	Group Buy
+	
 </html>
